--- a/examples/clip/index.html
+++ b/examples/clip/index.html
@@ -23,8 +23,8 @@
 
 
 
-    <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
-    <script src="../../src/jquery.scrolltransform.js"></script>
+    <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
+    <script src="../../src/jquery.transe.js"></script>
     <script>
         $(function() {
             var item = $('.item');
