--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <li class="src"><a href="examples/src/">src</a></li>
         <li class="sticky"><a href="examples/sticky/">sticky</a></li>
         <li class="mobile"><a href="examples/mobile/">mobile</a></li>
-    </ul> -->
+    </ul>
 
     <h2>No examples, yet.</h2>
 
@@ -250,7 +250,7 @@
         <li><a href="https://github.com/yckart/jquery.transe.js">Fork on GitHub</a></li>
     </ul>
 
-<!--     <div class="credits">
+    <div class="credits">
         Made with love by <a href="https://github.com/yckart">Yannick Albert</a> | <a href="https://twitter.com/yckart">@yckart</a><br>
         available under the MIT license.
     </div>
